# rs_syslog_viewer

./: .gitignore  Cargo.toml  README.md
src/: debug.rs  lib.rs  main.rs
src/app/: controller.rs  log_controller.rs  log_hub.rs  log_page.rs  mod.rs  rich.rs  state.rs  then.rs  time_matcher.rs  viewer.rs
src/app/controller/: app_controller.rs  debug_controller.rs  help_controller.rs  log_controller.rs  tag_controller.rs
src/app/page/: debug_page.rs  help_page.rs  log_page.rs  mod.rs  tag_page.rs
src/app/state/: debug_operation_state.rs  help_state.rs  log_content_searched_state.rs  log_content_searching_state.rs  log_navigation_state.rs  log_state_kit.rs  log_timestamp_searched_state.rs  log_timestamp_searching_state.rs  quit_state.rs  tag_operation_state.rs
src/file/: event.rs  head_reader.rs  mod.rs  new_line.rs  reader.rs  tail_reader.rs  watcher.rs
src/log/: data_board.rs  event.rs  iterator.rs  log_file.rs  log_file_content.rs  log_line.rs  mod.rs  rotated_log.rs
src/ui/: event.rs  key_event_ex.rs  mod.rs  pager.rs  state_machine.rs  status_bar.rs  view_port.rs
tests/: readers_test.rs  test_log_file.rs  test_log_hub.rs  test_readers.rs  test_rotated_log.rs
tests/common/: mod.rs
tests/data/: test.log.1  user.log.1
