[package]
name = "rs_syslog_viewer"
version = "0.1.0"
edition = "2024"
rust-version = "1.92.0"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = "0.7.17"
notify = "8.1.0"
anyhow = "1.0.100"
chrono = "0.4.43"
lazy_static = "1.5.0"
enum_dispatch = "0.3.13"
futures = "0.3.31"
log = "0.4.29"
ratatui = "0.30.0"
crossterm = "0.29.0"
color-eyre = "0.6.5"
itertools = "0.14.0"
